--- a/components/pid/test/CMakeLists.txt
+++ b/components/pid/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "."
-                       REQUIRES unity pid)
+                       REQUIRES unity pid esp_timer)
